--- a/blogapp/src/blog.css
+++ b/blogapp/src/blog.css
@@ -1,15 +1,19 @@
 
-
-
-.blog-post-content, .blog-post, .blog-container {
+.root {
   display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+  align-items: center;
+  justify-content: center;
 }
 
-.blog-post {
-  width: 80vw;
-  margin-bottom: 1vh;
-  background-color: red;
+.blog-container {
+      width: 80vw;
+      height: 80vh;
+      /* background-color: aqua; */
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2px;
+      justify-content: space-around;
+      margin-top: 1vh;
+      overflow-y: scroll;
+      box-sizing: border-box;
 }
