--- a/blogapp/src/blog.css
+++ b/blogapp/src/blog.css
@@ -11,11 +11,11 @@
   } */
   
   body {
-    width: 100vw;
+    /* width: 100vw;
     height: 100vh;
     margin: 0;
     padding: 0;
-    display: flex;
+    display: flex; */
     /* align-items: center; */
     justify-content: center;
     font-family: var(--font-family);
