--- a/blogapp/src/assets/styles/head-nav.css
+++ b/blogapp/src/assets/styles/head-nav.css
@@ -14,6 +14,12 @@
     font-family: 'General Sans', sans-serif;
   }
   
+  .logoPic {
+    width: 10vw;
+    height: 15vh;
+    top: -5px;
+    position: absolute;
+  }
   /* Logo/Header styling */
   .head-nav {
     font-weight: 600;
