--- a/blogapp/src/index.css
+++ b/blogapp/src/index.css
@@ -15,11 +15,11 @@ body {
   padding: 30px;
 }
 
-/* html ,body{
+html ,body{
   width: 100vw;
   height: 100vh;
   /* overflow: hidden; */
-} */
+} 
 
 
 code {
