--- a/blogapp/src/Footer.css
+++ b/blogapp/src/Footer.css
@@ -111,7 +111,7 @@ align-items: center;
 padding: 0px 15px;
 gap: 10px;
 
-width: 309px;
+width: 275px;
 height: 50px;
 
 background: #FFFFFF;
@@ -131,9 +131,16 @@ color: rgba(0, 0, 0, 0.6);
 
 
   }
+  .footerdivpara{
+    
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      margin-left: 20px;
+  }
   .btnFoter{
     /* button */
-    margin-left: -60px;
+    margin-left: -20px;
 /* Auto layout */
 display: flex;
 flex-direction: row;
@@ -179,7 +186,11 @@ text-align: start;
 /* identical to box height, or 29px */
 
 /* text/inverse */
-color: #FFFFFF;
+color: #FFFFFF !important;
 
 
+  }
+  .aFooter{
+    color: #FFFFFF !important;
+    text-decoration: none !important;
   }
