--- a/blogapp/src/blogUnit.css
+++ b/blogapp/src/blogUnit.css
@@ -1,11 +1,11 @@
-
+/* 
 
 .blog-post-content  {
         display: flex;
         flex-direction: column;
         /* justify-content: space-around; */
         /* justify-content: center; */
-        /* align-items: center; */
+        /* align-items: center; 
   }
   
   .blog-post {
@@ -25,5 +25,5 @@
     text-align: center;
     cursor: pointer;
     /* width: 100%;
-    height: 5vh; */
-  }
+    height: 5vh; 
+  } */
