--- a/blogapp/src/Footer.css
+++ b/blogapp/src/Footer.css
@@ -5,6 +5,7 @@
     /* padding: 40px 20px; */
     text-align: center;
     font-family: Arial, sans-serif;
+    margin-top: 30px;
   }
   
   #newsletter-ticker {
