--- a/blogapp/src/assets/styles/Home/home.css
+++ b/blogapp/src/assets/styles/Home/home.css
@@ -248,10 +248,10 @@ color: #000000;
     padding: 30px 50px 30px 0px;
     
   }
-  .profile-img{
+  /* .profile-img{
     width: 90%;
     margin-left: 15%;
-  }
+  } */
   .coltable{
     display: flex;
     align-items: center;
