--- a/blogapp/src/pages/About.css
+++ b/blogapp/src/pages/About.css
@@ -7,7 +7,46 @@
     border-radius: 10px;
     text-align: left;
   }
-  
+  #about-intro{
+
+font-family: 'General Sans';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 180%;
+/* or 29px */
+
+/* text/default */
+color: #000000;
+
+
+
+  }
+  .profile-img{
+    width: 90%;
+    margin-left: 15%;
+    margin-right: 30px;
+    border-radius: 100%;
+  }
+  .defAbt{
+    
+    padding-bottom: 40px;
+  }
+  .sousHeadHome1{
+
+/* text/large 500 */
+font-family: 'General Sans';
+font-style: normal;
+font-weight: 500;
+font-size: 22px;
+line-height: 180%;
+/* or 40px */
+
+/* text/default */
+color: #000000;
+
+
+  }
   #about-title {
     font-size: 3rem;
     font-weight: 900;
